* Escape external string (issue9394)

Version 5.0.25 - 2020-06-16
* Bug fixes (see mercurial logs for details)

Version 5.0.24 - 2020-06-03
* Bug fixes (see mercurial logs for details)

Version 5.0.23 - 2020-05-26
* Bug fixes (see mercurial logs for details)
* Escape external strings (issue9351)

Version 5.0.22 - 2020-05-01
* Bug fixes (see mercurial logs for details)

Version 5.0.21 - 2020-03-15
* Bug fixes (see mercurial logs for details)

Version 5.0.20 - 2020-03-09
* Bug fixes (see mercurial logs for details)
* Add noreferrer noopener to external URL (issue9089)

Version 5.0.19 - 2020-02-02
* Bug fixes (see mercurial logs for details)

Version 5.0.18 - 2019-12-16
* Bug fixes (see mercurial logs for details)

Version 5.0.17 - 2019-12-02
* Bug fixes (see mercurial logs for details)

Version 5.0.16 - 2019-11-08
* Bug fixes (see mercurial logs for details)

Version 5.0.15 - 2019-10-06
* Bug fixes (see mercurial logs for details)

Version 5.0.14 - 2019-09-15
* Bug fixes (see mercurial logs for details)

Version 5.0.13 - 2019-09-01
* Bug fixes (see mercurial logs for details)

Version 5.0.12 - 2019-08-17
* Bug fixes (see mercurial logs for details)

Version 5.0.11 - 2019-08-01
* Bug fixes (see mercurial logs for details)

Version 5.0.10 - 2019-07-01
* Bug fixes (see mercurial logs for details)

Version 5.0.9 - 2019-06-10
* Bug fixes (see mercurial logs for details)

Version 5.0.8 - 2019-05-16
* Bug fixes (see mercurial logs for details)

Version 5.0.7 - 2019-04-22
* Bug fixes (see mercurial logs for details)

Version 5.0.6 - 2019-04-02
* Bug fixes (see mercurial logs for details)

Version 5.0.5 - 2019-03-15
* Bug fixes (see mercurial logs for details)

Version 5.0.4 - 2019-02-19
* Bug fixes (see mercurial logs for details)

Version 5.0.3 - 2019-01-22
* Bug fixes (see mercurial logs for details)

Version 5.0.2 - 2019-01-05
* Bug fixes (see mercurial logs for details)

Version 5.0.1 - 2018-11-12
* Bug fixes (see mercurial logs for details)

Version 5.0.0 - 2018-10-01